resources/assets/sass/custom/_app.scss
// Layout styles
body:not(.bookmarklet) {
  padding-top: $nav-link-height + ($navbar-padding-y * 2);
}

.main {
  padding-top: ($spacer * 2);
  padding-bottom: ($spacer * 2);
}

.footer {
  opacity: .5;
}

@media (max-width: 991px) {
  .container {
    width: 100%;
    max-width: none;
  }
}

.card-table {
  margin: -#{$card-border-width};

  .table {

    border-bottom-left-radius: $border-radius;
    border-bottom-right-radius: $border-radius;
    overflow: hidden;
  }
}

.sharing-settings {
  display: flex;
  flex-wrap: wrap;

  .sharing-checkbox {
    flex: 0 0 auto;
    padding: $spacer / 2;
    font-size: $h4-font-size;

    input {
      display: none;
    }

    label {
      color: $text-muted;
      cursor: pointer;
    }

    input:checked + label {
      color: $success;
    }
  }
}

.share-links {
  display: flex;
  flex-wrap: wrap;

  .share-link {
    flex: 0 0 auto;
    margin: $spacer / 4;
  }
}

.btn-xs {
  @include button-size($btn-padding-y-xs, $btn-padding-x-xs, $btn-font-size-xs, $btn-line-height-xs, $btn-border-radius-xs);
}

#loader {
  display: none;
}

